cabal-version:      3.0
name:               reflex-dom-popup
version:            0.1.0.0
synopsis:           Lazy loading widgets for reflex-dom
description:        Lazy and progressive loading widgets for reflex-dom
homepage:           https://github.com/reflex-frp/reflex-dom-lazy
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ali Abrar
maintainer:         maintainer@obsidian.systems
copyright:          Obsidian Systems LLC
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Reflex.Dom.Popup
    build-depends:    data-default,
                      bytestring,
                      base,
                      containers,
                      ghcjs-dom,
                      jsaddle,
                      jsaddle-dom,
                      reflex-dom,
                      reflex-dom-core,
                      reflex-dom-attrs,
                      text,
    hs-source-dirs:   src
    default-language: Haskell2010

executable reflex-dom-popup
    import:           warnings
    main-is:          Readme.lhs
    build-depends:
        base,
        containers,
        reflex-dom,
        reflex-dom-attrs,
        reflex-dom-tables,
        -- If you don't include ghcjs-dom, you'll get an error saying that jsaddle-dom is invisible
        -- ghcjs-dom,
        reflex-dom-popup,
        text,
        jsaddle-dom,
        bytestring,
    hs-source-dirs:   src-exe
    default-language: Haskell2010
